# SolidRun_HummingBoard_i.MX8

./: README.md
SolidRun_HummingBoard_i.MX8/: Architecture.txt  Calculator.txt  Camera.txt  Dashboard.txt  Data_Structures_Module.txt  Dockerfile  Embedded.txt  GPIO.txt  I2C.txt  MQTT.txt  Progression.txt  Sensor.txt  Structure.txt  System_Monitor.txt  Yocto_Integration.txt  docker-compose.yml
SolidRun_HummingBoard_i.MX8/Calculator-main/: README.md
SolidRun_HummingBoard_i.MX8/Calculator-main/calculator/: Setup_Instructions  calculator  calculator.cpp  tree
SolidRun_HummingBoard_i.MX8/Calculator-main/calculator/backend/: CMakeLists.txt  calculator.cpp  calculator.h
SolidRun_HummingBoard_i.MX8/Calculator-main/calculator/frondend/: calculator_gui.py
SolidRun_HummingBoard_i.MX8/applications/calculator/: CMakeLists.txt
SolidRun_HummingBoard_i.MX8/applications/calculator/resources/qml/: CalculatorButton.qml  CalculatorView.qml
SolidRun_HummingBoard_i.MX8/applications/calculator/src/: CalculatorEngine.cpp  CalculatorEngine.h
SolidRun_HummingBoard_i.MX8/applications/common/ipc/: IPCManager.h
SolidRun_HummingBoard_i.MX8/applications/common/logger/: Logger.h
SolidRun_HummingBoard_i.MX8/applications/dashboard/: CMakeLists.txt
SolidRun_HummingBoard_i.MX8/applications/dashboard/resources/qml/: DashboardCard.qml  DashboardView.qml  main.qml
SolidRun_HummingBoard_i.MX8/applications/dashboard/src/: AppController.cpp  AppController.h  DeviceManager.cpp  DeviceManager.h  SystemMonitor.cpp  SystemMonitor.h  main.cpp
SolidRun_HummingBoard_i.MX8/applications/data-structures/include/: LinkedList.cpp  LinkedList.h  LinkedListWidget.h
SolidRun_HummingBoard_i.MX8/applications/data-structures/src/: LinkedListWidget.cpp
SolidRun_HummingBoard_i.MX8/device-tree/: custom.dts
SolidRun_HummingBoard_i.MX8/device-tree/overlays/: gpio-led.dts
SolidRun_HummingBoard_i.MX8/docs/: index.md
SolidRun_HummingBoard_i.MX8/scripts/: flash.sh  install-services.sh  manage-services.sh  monitor-services.sh  sdk.sh  setup.sh
SolidRun_HummingBoard_i.MX8/systemd/: Scripts_Executable.txt  calculator.service  camera.service  can.service  dashboard.service  database.service  embedded-learning-services.target  embedded-learning.target  gpio.service  i2c.service  logger.service  mqtt.service  sensors.service  spi.service  uart.service
SolidRun_HummingBoard_i.MX8/tests/unit/: CMakeLists.txt  test_linkedlist.cpp
SolidRun_HummingBoard_i.MX8/yocto/meta-ssr-app/conf/: layer.conf
SolidRun_HummingBoard_i.MX8/yocto/meta-ssr-app/recipes-apps/calculator/: calculator.bb
SolidRun_HummingBoard_i.MX8/yocto/meta-ssr-app/recipes-apps/dashboard/: dashboard.bb
SolidRun_HummingBoard_i.MX8/yocto/meta-ssr-app/recipes-apps/data-structures/: data-structures.bb
calculator/backend/: main.cpp
(+3 files in other folders)
